--- a/cursos/espanol/deeplearning/2_texto_a_vectores.ipynb
+++ b/cursos/espanol/deeplearning/2_texto_a_vectores.ipynb
@@ -271,7 +271,8 @@
     "\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "vectorizer = CountVectorizer()\n",
-    "X = vectorizer.fit_transform(df_train[\"Titulo\"])\n",
+    "vectorizer.fit(df_train[\"Titulo\"])\n",
+    "X = vectorizer.transform(df_train[\"Titulo\"])\n",
     "vect_df_train = pd.DataFrame(X.todense(), columns=vectorizer.get_feature_names_out())\n",
     "vect_df_train[\"Genero\"] = df_train[\"Genero\"]\n",
     "vect_df_train"
@@ -303,7 +304,7 @@
    "source": [
     "#@title Solucion Ejercicio 1: Paso 6 {display-mode:\"form\"}\n",
     "\n",
-    "X = vectorizer.fit_transform(df_test[\"Titulo\"])\n",
+    "X = vectorizer.transform(df_test[\"Titulo\"])\n",
     "vect_df_test = pd.DataFrame(X.todense(), columns=vectorizer.get_feature_names_out())\n",
     "vect_df_test[\"Genero\"] = df_test[\"Genero\"]\n",
     "vect_df_test"
