--- a/cursos/espanol/deeplearning/2_texto_a_vectores.ipynb
+++ b/cursos/espanol/deeplearning/2_texto_a_vectores.ipynb
@@ -242,6 +242,8 @@
    "source": [
     "#@title Solucion Ejercicio 1: Paso 2 {display-mode:\"form\"}\n",
     "\n",
+    "# Cargar los datos de entrenamiento a un dataframe \n",
+    "# para que sea mas simple de ver\n",
     "import pandas as pd\n",
     "df_train = pd.DataFrame({\"Titulo\": X_train,\"Genero\": y_train})\n",
     "df_train"
@@ -256,6 +258,8 @@
    "source": [
     "#@title Solucion Ejercicio 1: Paso 3 {display-mode:\"form\"}\n",
     "\n",
+    "# Cargar los datos de prueba a un dataframe \n",
+    "# para que sea mas simple de ver\n",
     "df_test = pd.DataFrame({\"Titulo\": X_test,\"Genero\": y_test})\n",
     "df_test"
    ]
@@ -269,6 +273,7 @@
    "source": [
     "#@title Solucion Ejercicio 1: Paso 4 {display-mode:\"form\"}\n",
     "\n",
+    "# Convertir el texto a vectores\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "vectorizer = CountVectorizer()\n",
     "vectorizer.fit(df_train[\"Titulo\"])\n",
@@ -287,9 +292,7 @@
    "source": [
     "#@title Solucion Ejercicio 1: Paso 5 {display-mode:\"form\"}\n",
     "\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "\n",
-    "# Predecir\n",
+    "# Usamos los vectores para entrenar el modelo\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "model = KNeighborsClassifier(n_neighbors=1)\n",
     "model.fit(vect_df_train.drop(\"Genero\", axis=1), vect_df_train[\"Genero\"])"
@@ -304,6 +307,9 @@
    "source": [
     "#@title Solucion Ejercicio 1: Paso 6 {display-mode:\"form\"}\n",
     "\n",
+    "# Convertimos el conjunto de prueba a vectores\n",
+    "# utilizando la transformacion que generamos con el \n",
+    "# conjunto de entrenamiento\n",
     "X = vectorizer.transform(df_test[\"Titulo\"])\n",
     "vect_df_test = pd.DataFrame(X.todense(), columns=vectorizer.get_feature_names_out())\n",
     "vect_df_test[\"Genero\"] = df_test[\"Genero\"]\n",
@@ -319,9 +325,12 @@
    "source": [
     "#@title Solucion Ejercicio 1: Paso 7 {display-mode:\"form\"}\n",
     "\n",
-    "y_pred = model.predict(vect_df_train.drop(\"Genero\", axis=1))\n",
-    "accuracy = accuracy_score(vect_df_train[\"Genero\"], y_pred)\n",
-    "print(\"Accuracy: \", accuracy)"
+    "# Usamos el modelo entrenado para predecir los generos\n",
+    "# del conjunto de prueba y calculamos el accuracy\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "y_pred = model.predict(vect_df_test.drop(\"Genero\", axis=1))\n",
+    "test_accuracy = accuracy_score(vect_df_test[\"Genero\"], y_pred)\n",
+    "print(\"Accuracy: \", test_accuracy)"
    ]
   },
   {
