Added zero shot exercise

--- a/cursos/espanol/deeplearning/3.1_zero_shot_classification.ipynb
+++ b/cursos/espanol/deeplearning/3.1_zero_shot_classification.ipynb
@@ -69,6 +69,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e79f6db8-2cfd-449c-9d0e-bbafa6fd61ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "175668e2-d594-4b22-ac6c-72689ee6dbad",
    "metadata": {},
@@ -128,6 +138,14 @@
     "    {\"score\": score, \"label\": candidate_label}\n",
     "    for score, candidate_label in sorted(zip(probs, candidate_labels), key=lambda x: -x[0])\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af0d55af-fd9e-4505-a0e8-f2344275ad1d",
+   "metadata": {},
+   "source": [
+    "## Ejercicios"
    ]
   },
   {
@@ -277,6 +295,50 @@
     "#@title Solucion Ejercicio 1: Paso 3 {display-mode:\"form\"}\n",
     "\n",
     "# Probamos el modelo con todas las peliculas y calculamos el accuracy\n",
+    "N = len(df)\n",
+    "accuracy = 0\n",
+    "for i in range(N):\n",
+    "    result = clasificador(df.iloc[i,:][\"Titulo\"],posibles_clases)\n",
+    "    print(f\"{i}: Real:{df.iloc[i,:]['Genero']} Predecido:{result['labels'][0]}\")\n",
+    "    if df.iloc[i,:]['Genero'] == result['labels'][0]:\n",
+    "        accuracy += 1\n",
+    "print(f\"Total accuracy:{accuracy/N}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac6cdee3-a002-4b35-8e95-056376c871b4",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 2:\n",
+    "\n",
+    "1. Probar la solucion anterior con el siguiente modelo:https://huggingface.co/Recognai/bert-base-spanish-wwm-cased-xnli. Analizar el resultado y los problemas que tiene.\n",
+    "\n",
+    "2. Probar el siguiente modelo: https://huggingface.co/MoritzLaurer/mDeBERTa-v3-base-xnli-multilingual-nli-2mil7 \n",
+    "\n",
+    "3. Probar tambien la diferencia entre utilizar device=-1 y device=0 en la clase pipeline. Analizar el resultado de ambas ejecuciones."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42112bdb-b78b-4852-8eb7-32facfe6704f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 2: {display-mode:\"form\"}\n",
+    "\n",
+    "# Aqui veremos que el modelo funciona mas rapido al estar en la\n",
+    "# GPU (device=0) que al estar en la CPU (device=-1)\n",
+    "# Tambien vemos que el modelo preentrenado en español\n",
+    "# funciona mejor aunque asocia locura con terror\n",
+    "# El segundo modelo predice todo correctamente\n",
+    "\n",
+    "# Probamos un modelo zero shot con la primera pelicula\n",
+    "from transformers import pipeline\n",
+    "clasificador = pipeline(\"zero-shot-classification\", model=\"Recognai/bert-base-spanish-wwm-cased-xnli\", device=-1)\n",
+    "#clasificador = pipeline(\"zero-shot-classification\", model=\"MoritzLaurer/mDeBERTa-v3-base-xnli-multilingual-nli-2mil7\", device=-1)\n",
+    "\n",
     "N = len(df)\n",
     "accuracy = 0\n",
     "for i in range(N):\n",
