--- a/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
+++ b/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
@@ -250,7 +250,8 @@
    "metadata": {},
    "source": [
     "# Otras librerias open source interesantes:\n",
-    "- [Supervision para tareas de computer vision](https://github.com/roboflow/supervision?tab=readme-ov-file)"
+    "- [Supervision para tareas de computer vision](https://github.com/roboflow/supervision?tab=readme-ov-file)\n",
+    "- [YOLO](https://github.com/ultralytics/ultralytics) [tutorial](https://www.youtube.com/watch?v=hf9MaEazc9s)"
    ]
   },
   {
