--- a/cursos/espanol/deeplearning/4_finetuning.ipynb
+++ b/cursos/espanol/deeplearning/4_finetuning.ipynb
@@ -502,7 +502,10 @@
    "metadata": {},
    "source": [
     "#### Automatic Finetuning:\n",
-    " - https://huggingface.co/docs/autotrain/"
+    " - https://huggingface.co/docs/autotrain/\n",
+    " \n",
+    "#### Data Labeling\n",
+    " - https://argilla.io/"
    ]
   },
   {
