Added archivos o ficheros

--- a/cursos/espanol/deeplearning/zz_AutoTrain.ipynb
+++ b/cursos/espanol/deeplearning/zz_AutoTrain.ipynb
@@ -10,7 +10,11 @@
     "Finetuning de Transformers sin codigo:\n",
     "\n",
     "- https://www.youtube.com/watch?v=2RgadGrQz3o\n",
-    "- https://www.youtube.com/watch?v=hWnijmsjNxM\n"
+    "- https://www.youtube.com/watch?v=hWnijmsjNxM\n",
+    "\n",
+    "\n",
+    "Mi space:\n",
+    "- https://huggingface.co/spaces/amiune/autotrain"
    ]
   },
   {
