--- a/cursos/espanol/deeplearning/zz_Gradio.ipynb
+++ b/cursos/espanol/deeplearning/zz_Gradio.ipynb
@@ -192,12 +192,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "197ddb6d-4be2-4459-8d86-865b33e9f33e",
+   "metadata": {},
+   "source": [
+    "## Graficos\n",
+    "\n",
+    "Gradio tambien nos permite crear graficos como [scaterplots](https://www.gradio.app/docs/scatterplot), de [barras](https://www.gradio.app/docs/barplot), de [lineas](https://www.gradio.app/docs/lineplot) y mas:\n",
+    "\n",
+    "https://www.gradio.app/docs/plot"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "adb465e6-2bc2-4f6b-8eda-5030020d4674",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "URL = \"https://docs.google.com/spreadsheets/d/1UOJpVKe34vsgSLPHPA9mBxMhb6kWp7Be1pgjO3jaJO4/export?format=csv\"\n",
+    "\n",
+    "def get_data():\n",
+    "    return pd.read_csv(URL)\n",
+    "\n",
+    "with gr.Blocks() as demo:\n",
+    "    gr.Markdown(\"# 📈 Grafico de lineas en tiempo real!\")\n",
+    "    with gr.Row():\n",
+    "        gr.LinePlot(get_data, every=5, \n",
+    "                    x=\"Fecha\", y=\"Ventas\", \n",
+    "                    y_title=\"Ventas ($ millones)\", \n",
+    "                    overlay_point=True, \n",
+    "                    width=300, height=300)\n",
+    "\n",
+    "demo.launch(share=False)"
+   ]
   },
   {
    "cell_type": "code",
