--- a/cursos/espanol/deeplearning/zz_Gradio.ipynb
+++ b/cursos/espanol/deeplearning/zz_Gradio.ipynb
@@ -58,9 +58,9 @@
     "    fn=saludo,\n",
     "    inputs=[\"text\", \"slider\"],\n",
     "    outputs=[\"text\"],\n",
-    "    allow_flagging=False\n",
+    "    allow_flagging='never'\n",
     ")\n",
-    "demo.launch(share=False)"
+    "demo.launch(share=True)"
    ]
   },
   {
@@ -99,9 +99,9 @@
     "    fn=saludo,\n",
     "    inputs=[mi_input, \"slider\"],\n",
     "    outputs=[mi_output],\n",
-    "    allow_flagging=False\n",
+    "    allow_flagging='never'\n",
     ")\n",
-    "demo.launch(share=False)"
+    "demo.launch(share=True)"
    ]
   },
   {
@@ -135,9 +135,9 @@
     "    fn=saludo,\n",
     "    inputs=[mi_input, mi_slider],\n",
     "    outputs=[mi_output],\n",
-    "    allow_flagging=False\n",
+    "    allow_flagging='never'\n",
     ")\n",
-    "demo.launch(share=False)"
+    "demo.launch(share=True)"
    ]
   },
   {
@@ -188,7 +188,7 @@
     "            gr.DataFrame(get_data)\n",
     "    btn.click(fn=update, inputs=mi_input, outputs=mi_output)\n",
     "    \n",
-    "demo.launch(share=False)"
+    "demo.launch(share=True)"
    ]
   },
   {
@@ -224,7 +224,7 @@
     "                    overlay_point=True, \n",
     "                    width=300, height=300)\n",
     "\n",
-    "demo.launch(share=False)"
+    "demo.launch(share=True)"
    ]
   },
   {
