--- a/cursos/espanol/deeplearning/zz_Gradio.ipynb
+++ b/cursos/espanol/deeplearning/zz_Gradio.ipynb
@@ -120,7 +120,10 @@
    "id": "2a85687b-8abb-4b8e-b6c3-a8e12aa6874a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -129,6 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#@title Solucion Ejercicio 1: {display-mode:\"form\"}\n",
     "\n",
     "mi_slider = gr.Slider(label=\"Intensidad!!\",value=10)\n",
     "demo = gr.Interface(\n",
