--- a/cursos/espanol/datascience/8_automl.ipynb
+++ b/cursos/espanol/datascience/8_automl.ipynb
@@ -171,6 +171,14 @@
    "source": [
     "clf = calcular_accuracy_train_val(automl, X_train, y_train, X_test, y_test)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8498e3e5-adc2-407c-98a3-aeb453fc2ea5",
+   "metadata": {},
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html)"
+   ]
   }
  ],
  "metadata": {
