--- a/cursos/espanol/datascience/7.1_ejercicio_diabetes_parte2.ipynb
+++ b/cursos/espanol/datascience/7.1_ejercicio_diabetes_parte2.ipynb
@@ -364,6 +364,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "886933b5-2c30-45f3-9d6b-c0c25debcff6",
+   "metadata": {},
+   "source": [
+    "## Libreria Optuna\n",
+    "\n",
+    "[Optuna](https://optuna.org/) es una libreria que nos permite automatizar la seleccion de los mejores parametros para nuestros modelos de forma similiar a gridsearch. Su funcionamiento es un poco mas complejo y lo veremos luego en el material avanzado."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dbefe893-6a57-456f-9897-0bc90408bf63",
    "metadata": {},
    "source": [
