--- a/cursos/espanol/deeplearning/5_obtener_vectores.ipynb
+++ b/cursos/espanol/deeplearning/5_obtener_vectores.ipynb
@@ -236,6 +236,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b63476d7-7048-4891-9f15-2553b16d8fda",
+   "metadata": {},
+   "source": [
+    "## Busquedas avanzadas (RAG)\n",
+    "\n",
+    "Esta es la base de lo que se conoce como Retrieval Augmented Generation y que veremos en las siguientes unidades con la libreria LangChain y bases de datos vectoriales"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "efbc1261-9804-40d0-b466-10c1823e53f9",
    "metadata": {},
    "source": [
