--- a/cursos/espanol/deeplearning/5_obtener_vectores.ipynb
+++ b/cursos/espanol/deeplearning/5_obtener_vectores.ipynb
@@ -236,6 +236,59 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ea00a812-6d3b-4609-a339-a9770daf084e",
+   "metadata": {},
+   "source": [
+    "## Dibujar los vectores\n",
+    "\n",
+    "Hay tecnicas para graficar vectores que tienen mas de 3 dimensiones, por ejemplo PCA, t-sne y umap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8f1201c-be40-4d15-82e5-a20ad280e877",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install umap-learn -U -q\n",
+    "\n",
+    "import umap\n",
+    "import numpy as np\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "umap_transform = umap.UMAP(random_state=0, transform_seed=0).fit(embeddings)\n",
+    "\n",
+    "projected_dataset_embeddings = umap_transform.transform(embeddings)\n",
+    "\n",
+    "query = \"Madrid\"\n",
+    "query_embedding = model.encode(query)\n",
+    "projected_query_embedding = umap_transform.transform([query_embedding])\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.scatter(projected_dataset_embeddings[:, 0], projected_dataset_embeddings[:, 1], s=10)\n",
+    "for i, txt in enumerate(projected_dataset_embeddings):\n",
+    "    ax.annotate(sentences[i], (projected_dataset_embeddings[i,0], projected_dataset_embeddings[i,1]))\n",
+    "ax.scatter(projected_query_embedding[:, 0], projected_query_embedding[:, 1], c='red')\n",
+    "ax.annotate(\"Madrid\", (projected_query_embedding[:, 0], projected_query_embedding[:, 1]))\n",
+    "ax.set_title('Vectores')\n",
+    "ax.axis('off');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ac7dea4-6be9-4179-be52-f32d53dfefef",
+   "metadata": {},
+   "source": [
+    "## Vectores de OpenAI\n",
+    "\n",
+    "- https://platform.openai.com/docs/guides/embeddings/use-cases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b63476d7-7048-4891-9f15-2553b16d8fda",
    "metadata": {},
    "source": [
