--- a/cursos/espanol/datascience/10_gradio.ipynb
+++ b/cursos/espanol/datascience/10_gradio.ipynb
@@ -5,7 +5,9 @@
    "id": "d9470ac8-092d-48ec-b597-d0fcf2788709",
    "metadata": {},
    "source": [
-    "# Gradio"
+    "# Gradio\n",
+    "\n",
+    "Aqui veremos como utilizar la libreria Gradio para poder crear una App para que otros puedan acceder a nuestros programas de Machine Learning mediante una pagina web."
    ]
   },
   {
