--- a/cursos/espanol/deeplearning/5_obtener_vectores.ipynb
+++ b/cursos/espanol/deeplearning/5_obtener_vectores.ipynb
@@ -116,7 +116,7 @@
    "source": [
     "for i in range(len(embeddings)):\n",
     "    cos_sim = util.cos_sim(query_embedding, embeddings.iloc[i,:])\n",
-    "    print(f\"Similitud del coseno {i}:\", cos_sim)"
+    "    print(f\"Similitud del coseno {i}: {cos_sim} para {sentences[i]}\")"
    ]
   },
   {
@@ -139,8 +139,11 @@
     "- Persona B: \"Si que es facil verdad?\"\n",
     "- Persona A: \"Si! Muchas gracias!!\"\n",
     "\n",
+    "Usar como query la siguiente frase: \"como haces tu pasta\"\n",
     "\n",
-    "\n"
+    "Analizar luego que pasa con la busqueda de las siguientes frases:\n",
+    "- \"que ingredientes lleva la receta\"\n",
+    "- \"Tallarines\"\n"
    ]
   },
   {
@@ -216,7 +219,9 @@
     "#@title Solucion Ejercicio 1: Paso 4 {display-mode:\"form\"}\n",
     "\n",
     "# Convertir el texto a buscar en vector\n",
-    "vector_a_buscar = model.encode(\"receta de pasta\")"
+    "#vector_a_buscar = model.encode(\"como haces tu pasta\")\n",
+    "#vector_a_buscar = model.encode(\"que ingredientes lleva la receta\")\n",
+    "vector_a_buscar = model.encode(\"Tallarines\")"
    ]
   },
   {
@@ -227,54 +232,16 @@
    "outputs": [],
    "source": [
     "#@title Solucion Ejercicio 1: Paso 5 {display-mode:\"form\"}\n",
-    "\n",
+    "similitud_chats = []\n",
     "# Calcular que vector del chat es mas similar al vector a buscar\n",
     "for i in range(len(vectores)):\n",
     "    cos_sim = util.cos_sim(vector_a_buscar, vectores[i,:])\n",
-    "    print(f\"Similitud del coseno {i}:\", cos_sim)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ea00a812-6d3b-4609-a339-a9770daf084e",
-   "metadata": {},
-   "source": [
-    "## Dibujar los vectores\n",
+    "    similitud_chats.append((float(cos_sim), chats[i]))\n",
+    "    \n",
+    "similitud_chats.sort(key=lambda tup: -tup[0])\n",
     "\n",
-    "Hay tecnicas para graficar vectores que tienen mas de 3 dimensiones, por ejemplo PCA, t-sne y umap"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8f1201c-be40-4d15-82e5-a20ad280e877",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install umap-learn -U -q\n",
-    "\n",
-    "import umap\n",
-    "import numpy as np\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "umap_transform = umap.UMAP(random_state=0, transform_seed=0).fit(embeddings)\n",
-    "\n",
-    "projected_dataset_embeddings = umap_transform.transform(embeddings)\n",
-    "\n",
-    "query = \"Madrid\"\n",
-    "query_embedding = model.encode(query)\n",
-    "projected_query_embedding = umap_transform.transform([query_embedding])\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.scatter(projected_dataset_embeddings[:, 0], projected_dataset_embeddings[:, 1], s=10)\n",
-    "for i, txt in enumerate(projected_dataset_embeddings):\n",
-    "    ax.annotate(sentences[i], (projected_dataset_embeddings[i,0], projected_dataset_embeddings[i,1]))\n",
-    "ax.scatter(projected_query_embedding[:, 0], projected_query_embedding[:, 1], c='red')\n",
-    "ax.annotate(\"Madrid\", (projected_query_embedding[:, 0], projected_query_embedding[:, 1]))\n",
-    "ax.set_title('Vectores')\n",
-    "ax.axis('off');"
+    "for similitud, texto in similitud_chats:\n",
+    "    print(f\"{similitud:0.2f}: {texto}\")"
    ]
   },
   {
@@ -282,9 +249,10 @@
    "id": "9ac7dea4-6be9-4179-be52-f32d53dfefef",
    "metadata": {},
    "source": [
-    "## Vectores de OpenAI\n",
+    "## Vectores de otras APIs\n",
     "\n",
-    "- https://platform.openai.com/docs/guides/embeddings/use-cases"
+    "- [OpenAI](https://platform.openai.com/docs/guides/embeddings/use-cases)\n",
+    "- [Ollama](https://github.com/ollama/ollama/blob/main/docs/api.md#generate-embeddings)"
    ]
   },
   {
