--- a/cursos/espanol/deeplearning/Ollama_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/Ollama_Prompting.ipynb
@@ -5,11 +5,19 @@
    "id": "c08833d7-54cd-495e-8eb8-1c60721d5d1d",
    "metadata": {},
    "source": [
-    "# ChatGPT Prompting\n",
+    "# Ollama Prompting\n",
     "\n",
-    "En esta unidad veremos como utilizar la libreria de OpenAI para realizar consultas a ChatGPT y poder utilizar sus respuestas para luego crear un programa mas complejo.\n",
+    "En esta unidad veremos como utilizar la libreria de Ollama para realizar consultas a un modelo Open Source instalado con Ollama y poder utilizar sus respuestas para luego crear un programa mas complejo.\n",
     "\n",
-    "Esta unidad es un resumen traducido con algunas modificaciones del [curso de Andrew Ng de Deeplearning.ai](https://www.deeplearning.ai/short-courses/chatgpt-prompt-engineering-for-developers/)"
+    "Primero necesitamos descargar e installar Ollama en nuestra PC:\n",
+    "- Ingresar a https://ollama.com/\n",
+    "\n",
+    "Una vez instalado descargar y ejecutar un LLM mediante la terminal o ventana de comandos con el siguiente comando:\n",
+    "```shell\n",
+    "ollama run gemma:2b\n",
+    "```\n",
+    "\n",
+    "Luego podemos empezar a ejecutar el siguiente codigo de python para interactuar con el modelo"
    ]
   },
   {
@@ -19,45 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install openai --upgrade --quiet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49f7e79f-64f6-4880-af61-581a28a8086a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from openai import OpenAI\n",
-    "\n",
-    "api_key=\"INGRESA AQUI TU TOKEN DE OPENAI\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5296b32-45a5-4609-a941-8ab00f3d95e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#@title [Opcional] cargar el token desde gdrive para que no se vea al dar clases {display-mode:\"form\"}\n",
-    "if api_key == \"INGRESA AQUI TU TOKEN DE OPENAI\":\n",
-    "    from google.colab import drive\n",
-    "    drive.mount('/content/drive')\n",
-    "    with open('drive/MyDrive/Tokens/openai.txt','r') as f:\n",
-    "        api_key = f.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d44bef4-831c-42c2-87ed-f20134c51e66",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# defaults to os.environ.get(\"OPENAI_API_KEY\")\n",
-    "client = OpenAI(api_key=api_key)"
+    "!pip install ollama --upgrade --quiet"
    ]
   },
   {
@@ -67,14 +37,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generar_texto(prompt, model=\"gpt-3.5-turbo\"):\n",
+    "import ollama"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dc2d26a-c9a8-45f0-aa57-ff734ce689b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generar_texto(prompt, model=\"gemma\"):\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
-    "    response = client.chat.completions.create(\n",
-    "        model=model,\n",
-    "        messages=messages,\n",
-    "        temperature=0, # aleatoriedad de las respuestas del modelo\n",
-    "    )\n",
-    "    return response.choices[0].message.content"
+    "    response = ollama.chat(model=model, messages=messages)\n",
+    "    return response['message']['content']"
    ]
   },
   {
@@ -84,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generar_texto(\"Hola\")"
+    "generar_texto(\"Hello\")"
    ]
   },
   {
@@ -94,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generar_texto(\"En que año estamos?\")"
+    "generar_texto(\"What is the current year?\")"
    ]
   },
   {
@@ -104,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generar_texto(\"Mi nombre es Hernan\")"
+    "generar_texto(\"My name is Hernan\")"
    ]
   },
   {
@@ -114,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generar_texto(\"Cual es mi nombre?\")"
+    "generar_texto(\"What is my name?\")"
    ]
   },
   {
@@ -608,9 +584,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
-   "name": "python3"
+   "name": "base"
   },
   "language_info": {
    "codemirror_mode": {
