--- a/cursos/espanol/datascience/8_automl.ipynb
+++ b/cursos/espanol/datascience/8_automl.ipynb
@@ -92,7 +92,7 @@
    "id": "2a7f4ee2-b801-415f-8dc5-a11b9932efdc",
    "metadata": {},
    "source": [
-    "Una vez que la libreria ha terminado de entrenar distintos modelos podemos ver cual ha sido el mejor (best_estimator), cuales son sus parametros (best_config) y su funcion de error (best_loss)"
+    "Una vez que la libreria ha terminado de entrenar distintos modelos podemos ver cual ha sido el mejor (best_estimator), cuales son sus parametros (best_config) y el resultado de su funcion de error (best_loss)"
    ]
   },
   {
@@ -154,7 +154,6 @@
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "def calcular_accuracy_train_val(clf, X_train, y_train, X_val, y_val):\n",
-    "    #clf.fit(X_train,y_train)\n",
     "    y_train_pred = clf.predict(X_train)\n",
     "    print(\"Entrenamiento accuracy:\",accuracy_score(y_train, y_train_pred))\n",
     "    y_val_pred = clf.predict(X_val)\n",
