--- a/cursos/espanol/deeplearning/3.2_text_generation.ipynb
+++ b/cursos/espanol/deeplearning/3.2_text_generation.ipynb
@@ -37,9 +37,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generar_texto = pipeline(task = \"text-generation\", \n",
-    "                      model = \"google/gemma-2b\",\n",
-    "                      device = 1)"
+    "def generar_texto(promp):\n",
+    "    pipe = pipeline(task = \"text-generation\", model = \"openai-community/gpt2\")\n",
+    "    ret = pipe(\"Hello. How are you? My name is Hernan\")\n",
+    "    return ret[0][\"generated_text\"]"
    ]
   },
   {
@@ -69,8 +70,8 @@
    "source": [
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"google/gemma-2b\")\n",
-    "model = AutoModelForCausalLM.from_pretrained(\"google/gemma-2b\")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"openai-community/gpt2\")\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"openai-community/gpt2\")\n",
     "\n",
     "input_text = \"Hello. How are you? My name is Hernan\"\n",
     "input_ids = tokenizer(input_text, return_tensors=\"pt\")\n",
