--- a/cursos/espanol/deeplearning/3.2_text_generation.ipynb
+++ b/cursos/espanol/deeplearning/3.2_text_generation.ipynb
@@ -37,9 +37,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generar_texto(promp):\n",
-    "    pipe = pipeline(task = \"text-generation\", model = \"openai-community/gpt2\")\n",
-    "    ret = pipe(\"Hello. How are you? My name is Hernan\")\n",
+    "def generar_texto(prompt):\n",
+    "    pipe = pipeline(task=\"text-generation\", model=\"openai-community/gpt2\")\n",
+    "    ret = pipe(prompt)\n",
     "    return ret[0][\"generated_text\"]"
    ]
   },
