--- a/cursos/espanol/deeplearning/5.1_graficar_vectores_mas3D.ipynb
+++ b/cursos/espanol/deeplearning/5.1_graficar_vectores_mas3D.ipynb
@@ -5,7 +5,7 @@
    "id": "703bc370-a834-4261-9ff9-ce3e302325f6",
    "metadata": {},
    "source": [
-    "# Como graficar vectores de mas de 3 dimensiones"
+    "# Como Graficar Vectores de mas de 3 Dimensiones"
    ]
   },
   {
