--- a/cursos/espanol/deeplearning/5.1_graficar_vectores_mas3D.ipynb
+++ b/cursos/espanol/deeplearning/5.1_graficar_vectores_mas3D.ipynb
@@ -88,7 +88,7 @@
     "\n",
     "Hay tecnicas para graficar vectores que tienen mas de 3 dimensiones, por ejemplo PCA, t-sne y umap. Estas tecnicas projectan estos vectores de muchas dimensiones en espacios de menos dimensiones para poderlos graficar.\n",
     "\n",
-    "A continuacion veremos como implementar UMAP, para ello primero instalamos e importamos la libreria."
+    "A continuacion veremos como implementar [UMAP](https://umap-learn.readthedocs.io/en/latest/index.html), para ello primero instalamos e importamos la libreria."
    ]
   },
   {
@@ -98,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install umap-learn -U -q"
+    "!pip install tsne -U -q"
    ]
   },
   {
@@ -108,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import umap"
+    "import tsne"
    ]
   },
   {
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "umap_transform = umap.UMAP(n_neighbors=3, transform_seed=0).fit(embeddings)\n",
+    "umap_transform = umap.UMAP().fit(embeddings)\n",
     "\n",
     "projected_dataset_embeddings = umap_transform.transform(embeddings)\n",
     "\n",
