--- a/cursos/espanol/datascience/9_interpretando_ml.ipynb
+++ b/cursos/espanol/datascience/9_interpretando_ml.ipynb
@@ -62,7 +62,8 @@
     "## Referencias:\n",
     "\n",
     "  - [Sklearn Inspection](https://scikit-learn.org/stable/modules/classes.html#module-sklearn.inspection)\n",
-    "  - [Shap](https://shap.readthedocs.io/en/latest/index.html)"
+    "  - [Shap](https://shap.readthedocs.io/en/latest/index.html)\n",
+    "  - [imodels](https://github.com/csinva/imodels)"
    ]
   },
   {
