--- a/cursos/espanol/deeplearning/5.1_graficar_vectores_mas3D.ipynb
+++ b/cursos/espanol/deeplearning/5.1_graficar_vectores_mas3D.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "### Projectar los vectores en espacios de 1, 2 o 3 dimesiones\n",
     "\n",
-    "Hay tecnicas para graficar vectores que tienen mas de 3 dimensiones, por ejemplo PCA, t-sne y umap. Estas tecnicas projectan estos vectores de muchas dimensiones en espacios de menos dimensiones para poderlos graficar.\n",
+    "Hay tecnicas para graficar vectores que tienen mas de 3 dimensiones, por ejemplo PCA, [t-sne](https://scikit-learn.org/stable/modules/classes.html#module-sklearn.manifold) y [UMAP](https://umap-learn.readthedocs.io/en/latest/index.html). Estas tecnicas projectan estos vectores de muchas dimensiones en espacios de menos dimensiones para poderlos graficar.\n",
     "\n",
     "A continuacion veremos como implementar [UMAP](https://umap-learn.readthedocs.io/en/latest/index.html), para ello primero instalamos e importamos la libreria."
    ]
