--- a/cursos/espanol/deeplearning/4_finetuning_autotrain.ipynb
+++ b/cursos/espanol/deeplearning/4_finetuning_autotrain.ipynb
@@ -126,7 +126,7 @@
    "id": "f8f26860-4954-4b73-a17b-30b425c64529",
    "metadata": {},
    "source": [
-    "## Paso 3: \n",
+    "## Paso 3A: \n",
     "\n",
     "Una vez finalizado el entrenamiento podremos encontrar nuestro modelo entrenado en huggingface en la URL: \n",
     " - https://huggingface.co/MI_NOMBRE_DE_USUARIO/MI-NOMBRE-DE-PROYECTO\n",
@@ -137,6 +137,20 @@
     "\n",
     "<div style=\"text-align:center\">\n",
     "<img src=\"img/autotrain-paso3.png\" width=\"800\"/>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f6f8f43-75ab-4c24-bab3-613fbb070466",
+   "metadata": {},
+   "source": [
+    "## Paso 3B: \n",
+    "\n",
+    "Iremos a la pestaña de settings y cambiaremos la visibilidad del modelo a Publico\n",
+    "\n",
+    "<div style=\"text-align:center\">\n",
+    "<img src=\"img/autotrain-paso3B.png\" width=\"800\"/>\n",
     "</div>"
    ]
   },
