--- a/cursos/espanol/deeplearning/LangChain_Agents.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_Agents.ipynb
@@ -52,13 +52,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title [Opcional] cargar el token desde gdrive para que no se vea al dar clases {display-mode:\"form\"}\n",
+    "#@title [Opcional] cargar el token desde colab para que no se vea al dar clases {display-mode:\"form\"}\n",
     "if api_key == \"INGRESA AQUI TU TOKEN DE OPENAI\":\n",
-    "    from google.colab import drive\n",
-    "    drive.mount('/content/drive')\n",
-    "    with open('drive/MyDrive/Tokens/openai.txt','r') as f:\n",
-    "        api_key = f.read()\n",
-    "        openai.api_key = api_key"
+    "    from google.colab import userdata\n",
+    "    api_key = userdata.get('OPENAI_TOKEN')\n",
+    "    openai.api_key = api_key"
    ]
   },
   {
