--- a/cursos/espanol/datascience/A2.3_cleanlab.ipynb
+++ b/cursos/espanol/datascience/A2.3_cleanlab.ipynb
@@ -53,8 +53,6 @@
     "from sklearn.ensemble import HistGradientBoostingClassifier\n",
     "from sklearn.neighbors import NearestNeighbors\n",
     "\n",
-    "from cleanlab import Datalab\n",
-    "\n",
     "SEED = 42  # for reproducibility\n",
     "np.random.seed(SEED)\n",
     "random.seed(SEED)"
@@ -107,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install cleanlab -U -q"
+    "!pip install 'cleanlab[datalab]' -U -q"
    ]
   },
   {
@@ -127,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = {\"X\": X_train, \"y\": y_train}\n",
+    "data = {\"X\": X_train.values, \"y\": y_train}\n",
     "\n",
     "lab = Datalab(data, label_name=\"y\")\n",
     "lab.find_issues(pred_probs=pred_probs, knn_graph=knn_graph)"
